// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnonymousFunctionLiteral 1`] = `
Object {
  "argument": Object {
    "definitions": Array [
      Object {
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": Object {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "kind": "ValueIdentifier",
          "value": "value",
        },
        "kind": "NamedDefinition",
        "typeTag": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "number",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
  "block": Object {
    "kind": "Block",
    "statements": Array [
      Object {
        "expression": Object {
          "_meta": Object {
            "end": Object {
              "column": 34,
              "line": 1,
              "offset": 33,
            },
            "start": Object {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "value",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "kind": "AnonymousFunctionLiteral",
}
`;

exports[`AnonymousFunctionLiteral.emptyArg 1`] = `
Object {
  "argument": Object {
    "definitions": Array [],
    "kind": "RecordDefinition",
  },
  "block": Object {
    "kind": "Block",
    "statements": Array [
      Object {
        "expression": Object {
          "kind": "NumberLiteral",
          "value": 3,
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "kind": "AnonymousFunctionLiteral",
}
`;

exports[`FunctionCall 1`] = `
Object {
  "argument": Object {
    "definitions": Array [
      Object {
        "expression": Object {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "kind": "ValueIdentifier",
          "value": "msg",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
  "identifier": Object {
    "_meta": Object {
      "end": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "log",
  },
  "kind": "FunctionCall",
}
`;

exports[`FunctionCall.emtpyArg 1`] = `
Object {
  "argument": Object {
    "definitions": Array [],
    "kind": "RecordLiteral",
  },
  "identifier": Object {
    "_meta": Object {
      "end": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "log",
  },
  "kind": "FunctionCall",
}
`;
